# tcp-client

./: .gitignore  CMakeLists.txt  build.sh
include/: GameClientAPI.h  client.hpp  game_client_api.h  logger.hpp  packet.hpp  protocol.hpp  synapse_net.h
include/core/: conn_request.h
include/game/: player.hpp
include/models/: player_connection.h  requests.h
include/network/: protocol.h  tcp_socket.h
include/tcp/: packet.hpp  tcp_connection.hpp  tcpconnection.hpp
include/utils/: bytes.hpp  checksum.h
src/: GameClient.cpp  game.cpp  game_client_api.cpp  main.cpp  synapse_net.cpp
src/core/: conn_request.cpp
src/game/: player.cpp
src/models/: player_connection.cpp  requests.cpp
src/network/: protocol.cpp  tcp_socket.cpp
src/tcp/: TcpConnection.cpp  client.cpp  packet.cpp  protocol.cpp  tcp_connection.cpp  tcpconnection.cpp
src/utilities/: bytes.cpp  logger.cpp
src/utils/: bytes.cpp  checksum.cpp  logger.cpp
